# swarmpool

./: .gitignore  GENESIS.json  README.md
cli/: Cargo.toml  README.md
cli/inference/: runner.py
cli/src/: config.rs  crypto.rs  ipfs.rs  main.rs  models.rs  provider.rs  schema.rs
cli/src/commands/: claim.rs  epochs.rs  init.rs  mod.rs  prove.rs  seal.rs  status.rs  submit.rs  validate.rs  watch.rs  withdraw.rs
docs/: ARCHITECTURE.md  CLI.md  ECONOMICS.md  IDENTITY.md  LEDGER.md  MERLIN.md  ORB.md  POOL_LAYOUT.md  PROVIDERS.md  README.md  SIGNING.md  SWARMEPOCH.md  SWARMPOOL.md
landing/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
landing/public/index/: latest.json
landing/src/components/: CurrentEpoch.astro  JobQueue.astro  LiveDashboard.tsx  ProviderHighlights.astro  RecentProofs.astro  StatsCard.astro
landing/src/layouts/: Base.astro
landing/src/lib/: pool.ts
landing/src/pages/: epochs.astro  index.astro  join.astro  providers.astro
merlin/: .env.example  README.md  requirements.txt  setup.py
merlin/merlin/: __init__.py  cli.py  config.py  crypto.py  epoch.py  publisher.py  schemas.py  watcher.py
