[package]
name = "swarm-cli"
version = "0.1.0"
edition = "2021"
description = "SwarmPool CLI - Decentralized Medical Compute Network"
authors = ["SudoHash LLC"]
license = "MIT"
repository = "https://github.com/sudohash/swarm-cli"
readme = "README.md"
keywords = ["medical-ai", "gpu", "compute", "ipfs", "decentralized"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum/signing
ethers = { version = "2.0", features = ["rustls"] }

# IPFS client
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls"] }

# Terminal UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"

# Config
directories = "5.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
hex = "0.4"
rand = "0.8"

# Validation
regex = "1.10"

[[bin]]
name = "swarm"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
